# dstack-vpc

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build-image.sh  pinned-packages.txt
.cargo/: audit.toml
.github/workflows/: build.yml
configs/: etcd.yaml  headscale_config.yaml  litestream.yml  nginx-client-proxy.conf  nginx-etcd-proxy.conf  nginx-lb.conf  supervisord.conf
scripts/: auto-entry.sh  detect-env.sh  etcd-wrapper.sh  functions.sh  generate-compose.sh  mesh-serve.sh  vpc-node-entry.sh  vpc-node-setup.sh  vpc-server-entry.sh
service-mesh/: Cargo.toml
service-mesh/src/: client.rs  main.rs  server.rs
vpc-api-server/: Dockerfile  main.go
